k8s/backstage/base/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          ports:
            - name: http
              containerPort: 7007
              protocol: TCP
          imagePullPolicy: Always
          image: image-registry.openshift-image-registry.svc:5000/backstage-dev/backstage:ryu
