k8s/backstage/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          ports:
            - name: http
              containerPort: 7007
              protocol: TCP
          imagePullPolicy: Always
          image: backstage:latest
