k8s/backstage/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backstage
spec:
  ports:
    - name: backstage
      protocol: TCP
      port: 7007
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: backstage
